# bootstrap

./: README.md
.devcontainer/: Dockerfile
.github/workflows/: ci.yaml
fastapi/: pyproject.toml
nextapp/prisma/: schema.prisma
nextapp/prisma/migrations/20241228184151_initial_migration/: migration.sql
